--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -16,4 +16,4 @@ jobs:
         cd huaweicloud-sdk-core || exit 1
         pip install -r requirements.txt
         pip install -r test-requirements.txt
-        pytest -s -v tests/
+        pytest tests/ -s -v --cov
