--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -16,6 +16,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         cd huaweicloud-sdk-core || exit 1
-        pip install -r requirements.txt
         pip install -r test-requirements.txt
-        pytest tests/ -s -v --cov -k "not provider"
+        ${{ vars.CI_CMD }}
