--- a/.github/workflows/test-pypi-publish.yml
+++ b/.github/workflows/test-pypi-publish.yml
@@ -29,4 +29,4 @@ jobs:
         cd "${GITHUB_WORKSPACE}" || exit 1
         twine upload --repository testpypi ./*.whl --skip-existing --verbose
       env:
-        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        PYPI_API_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
