--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -4,14 +4,17 @@ on:
   schedule:
   - cron: '0 0 * * *'
 jobs:
-  publish:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
+  build:  
+    runs-on: ubuntu-latest  
+    strategy:  
+      matrix:  
+        python-version: [3.6, 3.12]
+    steps:  
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}  
+      uses: actions/setup-python@v5
+      with:  
+        python-version: ${{ matrix.python-version }}  
     - name: Pytest CI
       run: |
         python -m pip install --upgrade pip
