--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -5,7 +5,7 @@ on:
   - cron: '0 0 * * *'
 jobs:
   build:  
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-20.04
     strategy:  
       matrix:  
         python-version: [3.6.8, 3.12.4]
