--- a/.github/workflows/pytest-ci.yml
+++ b/.github/workflows/pytest-ci.yml
@@ -5,10 +5,10 @@ on:
   - cron: '0 0 * * *'
 jobs:
   test:  
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:  
       matrix:  
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
     steps:  
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}  
